# ioeditor

./: Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  default_color.ioc  example.c  main
include/: bot_bar.h  default_config.h  file_manager.h  file_manager.hpp  gui.h  gui.hpp  syntax_engine.h  ui.h
src/: bot_bar.c  file_manager.c  file_manager.cpp  gui.c  gui.cpp  main.c  main.cpp  syntax_engine.c
src/config/: default_color.ioc
